# release-learning-2

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  release-please-config.json
.github/: release.yml
.github/workflows/: local.yml  npm.yml  release-js.yml  release-py.yml  release.yml
a-crate/: CHANGELOG.md  Cargo.toml
b-crate/: CHANGELOG.md  Cargo.toml
clients/nodejs/: .gitignore  .release-it.json  CHANGELOG.md  package.json
clients/python/: CHANGELOG.md  pyproject.toml
clients/python/src/relase-learning-py/: __init__.py
release-test/: CHANGELOG.md  Cargo.toml
release-test/src/: main.rs
